# Sales-Forecasting

./: .gitignore  LICENSE  LinkedIn_Post.md  MANIFEST.in  README.md  STRUCTURE.md  Social_Media_Kit.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.py  summary.py
data/: walmart_sales_data.csv
docs/: API.md  USAGE.md
src/: __init__.py  advanced_forecasting.py  data_downloader.py  sales_forecasting.py
tests/: __init__.py  test_forecasting.py
